force-app/main/default/objects/Invoice__c/Invoice__c.object-meta.xml
<CustomObject>
    <description
  >Demo invoice for the FX Invoice Conversion reference feature. Holds an amount in a source currency that is converted to a configurable base currency using live ECB rates.</description>
    <label>Invoice</label>
    <pluralLabel>Invoices</pluralLabel>
    <nameField>
        <displayFormat>INV-{00000}</displayFormat>
        <label>Invoice Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>