force-app/main/default/objects/Invoice__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <label>Amount</label>
    <description>Invoice amount in the source currency.</description>
    <precision>16</precision>
    <scale>2</scale>
    <required>true</required>
    <type>Number</type>
</CustomField>