force-app/main/default/objects/Invoice__c/fields/Amount_Base__c.field-meta.xml
<CustomField>
    <fullName>Amount_Base__c</fullName>
    <label>Amount (Base Currency)</label>
    <description
  >Amount converted into the configured base currency. Populated by the conversion service.</description>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>