force-app/main/default/objects/Invoice__c/fields/Currency_ISO__c.field-meta.xml
<CustomField>
    <fullName>Currency_ISO__c</fullName>
    <label>Currency (ISO)</label>
    <description
  >ISO 4217 currency code of the source amount, e.g. USD, GBP, JPY.</description>
    <length>3</length>
    <required>true</required>
    <type>Text</type>
</CustomField>