force-app/main/default/objects/Invoice__c/fields/FX_Rate__c.field-meta.xml
<CustomField>
    <fullName>FX_Rate__c</fullName>
    <label>FX Rate</label>
    <description
  >Exchange rate (source to base) used for the latest conversion.</description>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>