force-app/main/default/objects/Invoice__c/fields/Rate_Date__c.field-meta.xml
<CustomField>
    <fullName>Rate_Date__c</fullName>
    <label>Rate Date</label>
    <description
  >Date of the ECB reference rate returned by the FX provider.</description>
    <type>Date</type>
</CustomField>